# edit-xlsx

./: .gitignore  Cargo.toml  README.md  examples.bat  new.xlsx
.editing-new (2).xlsx/docProps/: app.xml  core.xml
.editing-new (2).xlsx/xl/: styles.xml  workbook.xml
.github/workflows/: rust.yml
examples/: accounting.adoc  array_formula.rs  array_formula.xlsx  autofilter.rs  background.rs  background.xlsx  comments.rs  defined_name.rs  defined_name.xlsx  demo.rs  doc_properties.rs  duplicate_sheet.rs  dynamic_arrays.rs  dynamic_arrays.xlsx  edit_align.rs  edit_border.rs  edit_cell.rs  edit_color.rs  edit_sheet.rs  edit_style.rs  edit_type.rs  hello_world.rs  helper.rs  hide_row_col.rs  hide_sheet.rs  ignore_errors.rs  ignore_errors.xlsx  image.rs  lambda.rs  merge.rs  merge.xlsx  new_workbook.rs  old_array_formula.rs  outline.rs  outline_collapsed.rs  panes.rs  read.rs  read_and_copy.rs  read_only.rs  right_to_left.rs  (+22 more)
examples/output/: edit_cell.xlsx  set_background1.xlsx  set_background2.xlsx
examples/xlsx/: accounting.xlsx  new.xlsx
new (3)/: [Content_Types].xml
resources/: new.xlsx
src/: ansi_term.rs  api.rs  cell.rs  col.rs  core.rs  file.rs  lib.rs  result.rs  row.rs  shared_string.rs  sheet.rs  test.rs  utils.rs  workbook.rs  xml.rs
src/api/: border.rs  (+15 more)
tests/: template.rs  test_background.rs  test_border.rs  test_col.rs  test_color.rs  test_concurrent.rs  test_duplicate.rs  test_error.rs  test_image.rs  test_named_range.rs  test_outline_collapse.rs  test_read_cell.rs  test_rich_text.rs  test_row.rs  test_text.rs  test_theme.rs  test_write_cell.rs
(+147 files in other folders)
