[package]
name = "edit-xlsx"
license = "MIT"
description = "A tiny tool to read and edit xlsx file."
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
serde = { version = "1.0.196", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
walkdir = "2.4.0"