[package]
name = "edit-xlsx"
license = "MIT"
description = "A quick and easy-to-use Rust library for Excel file editing."
homepage = "https://github.com/MortalreminderPT/edit-xlsx"
repository = "https://github.com/MortalreminderPT/edit-xlsx"
documentation = "https://docs.rs/edit-xlsx/latest/edit_xlsx"
keywords = ["excel", "xlsx", "writer", "editor"]
readme = "README.md"
version = "0.3.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
serde = { version = "1.0.196", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
walkdir = "2.4.0"
futures = "0.3.30"